[gd_scene load_steps=11 format=3 uid="uid://cgv8lco0wyus5"]

[ext_resource type="Script" path="res://Scripts/intro_scene.gd" id="1_d5oca"]
[ext_resource type="FontFile" uid="uid://b3620iqlduhpn" path="res://font/line_pixel-7.ttf" id="1_gxnss"]
[ext_resource type="Texture2D" uid="uid://c616hx8emdpue" path="res://Sprites/bandeau1.png" id="2_w1f1b"]
[ext_resource type="Texture2D" uid="uid://kk6rcybtq4qs" path="res://Sprites/bandeau2.png" id="3_8ycvr"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dnilx"]
texture = ExtResource("3_8ycvr")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_nucng"]
texture = ExtResource("2_w1f1b")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_377f6"]
texture = ExtResource("2_w1f1b")

[sub_resource type="Animation" id="Animation_1dl8e"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(12, -440)]
}

[sub_resource type="Animation" id="Animation_5dsw2"]
resource_name = "scrolling"
length = 20.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 20),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(10, 199), Vector2(10, -436)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kq4r5"]
_data = {
"RESET": SubResource("Animation_1dl8e"),
"scrolling": SubResource("Animation_5dsw2")
}

[node name="Control" type="Control" node_paths=PackedStringArray("loadingBar", "lbPercentage")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d5oca")
loadingBar = NodePath("VBoxContainer2/ProgressBar")
lbPercentage = NodePath("VBoxContainer2/VBoxContainer/lbPercentage")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -228.0
offset_top = -575.0
offset_right = 231.0
offset_bottom = -136.0
grow_horizontal = 2
grow_vertical = 2
text = "Kamartia island,

A beautiful region who has rumors and many secret stories.

The locals often explain to strangers some of them.

Being a true adventurer,  you heard some of them but only one interested you.

\"The legend said that some invaluable treasures are hidden in the lake. All of them are kept by a divinity who only appears for people who wanna steal the booty. Immortality, wealth and skill awaits the chosen one\"

It's time to move on!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 183.0
offset_right = 2.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="ColorRect3" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -86.0
offset_right = 2.0
offset_bottom = -269.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Button" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -82.0
offset_top = -58.0
offset_right = 179.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.629351, 0.793227)
theme_override_colors/font_hover_pressed_color = Color(0.984314, 0.94902, 0.211765, 1)
theme_override_colors/font_hover_color = Color(0.984314, 0.94902, 0.211765, 1)
theme_override_colors/font_pressed_color = Color(0.984314, 0.94902, 0.211765, 1)
theme_override_colors/font_focus_color = Color(0.984314, 0.94902, 0.211765, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_colors/icon_focus_color = Color(0.984314, 0.94902, 0.211765, 1)
theme_override_colors/icon_pressed_color = Color(0.984314, 0.94902, 0.211765, 1)
theme_override_colors/icon_hover_color = Color(0.984314, 0.94902, 0.211765, 1)
theme_override_colors/icon_hover_pressed_color = Color(0.984314, 0.94902, 0.211765, 1)
theme_override_fonts/font = ExtResource("1_gxnss")
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxTexture_dnilx")
theme_override_styles/hover = SubResource("StyleBoxTexture_nucng")
theme_override_styles/normal = SubResource("StyleBoxTexture_377f6")
text = "SKIP"
icon_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_kq4r5")
}

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -34.0
offset_right = 104.0
grow_vertical = 0
alignment = 1

[node name="VBoxContainer" type="HBoxContainer" parent="VBoxContainer2"]
layout_mode = 2
alignment = 1

[node name="lbLoading" type="Label" parent="VBoxContainer2/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "LOADING..."
horizontal_alignment = 1

[node name="lbPercentage" type="Label" parent="VBoxContainer2/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "0 %"
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer2"]
visible = false
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
max_value = 1.0
step = 0.0
show_percentage = false

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
